Fixes alignment of contract invocation names (#124)

--- a/src/components/contract-invocation/ContractsInvocations.scss
+++ b/src/components/contract-invocation/ContractsInvocations.scss
@@ -67,7 +67,6 @@
   .invocation-name-container {
     display: flex;
     align-items: center;
-    justify-content: space-between;
     width: 100%;
     margin-right: 12px;
     text-decoration: none;
@@ -77,6 +76,11 @@
       font-size: 16px;
       color: #ffffff;
       letter-spacing: 0;
+      margin-right: 24px;
+      width: 100px;
+      overflow: hidden;
+      text-overflow: ellipsis;
+      white-space: nowrap;
     }
 
     .invocation-position {
